--- a/Pfe/src/main/resources/application.properties
+++ b/Pfe/src/main/resources/application.properties
@@ -1,3 +1,10 @@
 spring.application.name=Pfe
 server.port=8084
 spring.datasource.url=jdbc:h2:mem:pfe
+spring.main.allow-bean-definition-overriding=true
+#management.endpoints.web.exposure.include=*
+
+management.endpoints.web.exposure.include=*
+
+
+management.endpoint.health.show-details= always
